--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>achira-studios</title>
+    <title>AchiraStudios - Modern Websites. Affordable Solutions.</title>
   </head>
   <body>
     <div id="root"></div>
